# Ecobici

./: .gitignore  main.py  parse_ecobici_data.py  pyproject.toml  requirements.txt  sth.py
data/: dev.ipynb  get_data.py  join_files.py  station_info.json  top_20_stations_destinations.md  top_20_stations_origins.md  usage_by_hour.md
styles/: ecobici.mplstyle
