[project]
name = "ecobici"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.57.0",
    "geoplot>=0.5.1",
    "httpx>=0.28.1",
    "joblib==1.5.0",
    "jupyter>=1.1.1",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.1",
    "mypy>=1.15.0",
    "networkx>=3.4.2",
    "notebook>=7.4.2",
    "numpy==2.2.5",
    "packaging==25.0",
    "pandas==2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "pillow==11.2.1",
    "polars==1.29.0",
    "pyarrow>=20.0.0",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "six==1.17.0",
    "stubs>=1.0.0",
    "tabulate>=0.9.0",
    "threadpoolctl==3.6.0",
    "tqdm>=4.67.1",
    "types-seaborn>=0.13.2.20250111",
    "types-tqdm>=4.67.0.20250516",
    "tzdata==2025.2",
]
